# Meta_Hackathon

./: .gitignore  Dockerfile  README.md  client.py  diag_output.txt  diagnose_graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
diffs/: task1_easy.diff  task2_medium.diff  task3_hard.diff
scratch/: test_graders.py
server/: app.py  environment.py  models.py
server/graders/: grader1.py  grader2.py  grader3.py
server/tasks/: task1.py  task2.py  task3.py
ui/: diff.js  index.html  style.css
